--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Scène 3D Interactif",
-    "short_name": "3D Scène",
+    "short_name": " Salon-Chanbre 3D",
     "description": "Une scène interactive en 3D",
     "start_url": "/index.html",
     "display": "standalone",
