--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
     "theme_color": "#3498db",
     "icons": [
       {
-        "src": "/images/MAISON CARRELAGE.png",
+        "src": "/images/MAISON CARRELAGE.jpg",
         "sizes": "256x256",
         "type": "image/png"
       },
       {
-        "src": "/images/MAISON CARRELAGE.png",
+        "src": "/images/MAISON CARRELAGE.jpg",
         "sizes": "256x256",
         "type": "image/png",
         "purpose": "maskable"
