--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Scène 3D Interactif",
+    "name": "Salon-Chanbre 3D",
     "short_name": " Salon-Chanbre 3D",
     "description": "Une scène interactive en 3D",
     "start_url": "/index.html",
