--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Salon-Chanbre 3D",
-    "short_name": " Salon-Chanbre 3D",
+    "short_name": " Salon-Chambre 3D",
     "description": "Une scène interactive en 3D",
     "start_url": "/index.html",
     "display": "standalone",
